WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
16852
REGRESSION: Many leaks seen on buildbot after
r29425
https://bugs.webkit.org/show_bug.cgi?id=16852
Summary
REGRESSION: Many leaks seen on buildbot after r29425
Mark Rowe (bdash)
Reported
2008-01-12 07:45:32 PST
The change in <
http://trac.webkit.org/projects/webkit/changeset/29425
> appears to leak the ActivationStackNodes that are allocated by JSGlobalObject::reset. An attempted fix for this was landed in <
http://trac.webkit.org/projects/webkit/changeset/29435
>, but it caused crashes so was rolled out shortly after. Leaks output:
http://build.webkit.org/results/trunk-mac-intel-debug/3024/DumpRenderTree6-leaks.txt
Attachments
Add attachment
proposed patch, testcase, etc.
Mark Rowe (bdash)
Comment 1
2008-01-12 20:52:47 PST
Fixed in
r29443
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug