2008-01-12  Cameron Zwarich  <cwzwarich@uwaterloo.ca>

Reviewed by Mark Rowe.

        Fix http://bugs.webkit.org/show_bug.cgi?id=16852
        Fixes leaking of ActivationStackNode objects.

        * kjs/JSGlobalObject.cpp:
        (KJS::JSGlobalObject::deleteActivationStack):
        (KJS::JSGlobalObject::~JSGlobalObject):
        (KJS::JSGlobalObject::init):
        (KJS::JSGlobalObject::reset):
        * kjs/JSGlobalObject.h:


git-svn-id: svn://svn.chromium.org/blink/trunk@29443 bbb929c8-8fbe-4397-9dbb-9b2b20218538