third_party/WebKit/JavaScriptCore/kjs/JSGlobalObject.cpp
@@ -91,6 +91,15 @@ static inline unsigned getCurrentTime() {
 
 JSGlobalObject* JSGlobalObject::s_head = 0;
 
+void JSGlobalObject::deleteActivationStack()
+{
+    ActivationStackNode* prevNode = 0;
+    for (ActivationStackNode* currentNode = d()->activations; currentNode; currentNode = prevNode) {
+        prevNode = currentNode->prev;
+        delete currentNode;
+    }
+}
+
 JSGlobalObject::~JSGlobalObject()
 {
     ASSERT(JSLock::currentThreadIsHoldingLock());
@@ -103,6 +112,8 @@ JSGlobalObject::~JSGlobalObject()
     s_head = d()->next;
     if (s_head == this)
         s_head = 0;
+    
+    deleteActivationStack();
     
     delete d();
 }
@@ -128,6 +139,8 @@ void JSGlobalObject::init()
     d()->currentExec = 0;
     d()->recursion = 0;
     d()->debugger = 0;
+    
+    d()->activations = 0;
     
     reset(prototype());
 }
@@ -203,7 +216,10 @@ void JSGlobalObject::reset(JSValue* prototype)
 
     ExecState* exec = &d()->globalExec;
 
-    d()->activations = new ActivationStackNode;
+    deleteActivationStack();
+    ActivationStackNode* newStackNode = new ActivationStackNode;
+    newStackNode->prev = 0;    
+    d()->activations = newStackNode;
     d()->activationCount = 0;
 
     // Prototypes
