third_party/WebKit/JavaScriptCore/kjs/JSGlobalObject.h
@@ -245,6 +245,7 @@ namespace KJS {
         bool checkTimeout();
         void resetTimeoutCheck();
 
+        void deleteActivationStack();
         void checkActivationCount();
 
         static JSGlobalObject* s_head;
